--- a/src/tools/astrosketch.css
+++ b/src/tools/astrosketch.css
@@ -53,7 +53,7 @@ canvas{
   .astroContainer button{
     width:auto;
     height:auto;
-    font-size:16px;
+    font-size:20px;
   }
   .astroContainer form{
     font-size:16px;
